--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-title: "Online-Stata-Kurs"
+title: "Stata Crash Course"
 author: "Tom Günther"
 
 only_build_toc_files: true
@@ -8,3 +8,6 @@ launch_buttons:
 
 execute:
   execute_notebooks: "off"
+
+html:
+  baseurl: /stata-crashcourse
